--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ img {
     background-color: #f4f7fb;
     display: grid;
     grid-template: 1fr 1fr / 3fr 1fr;
-    gap: 2rem;
+    gap: 3rem;
     padding: 2rem 2rem 4rem 2rem;
 }
 
@@ -196,7 +196,8 @@ img {
 
 #your_projects {
     position: relative;
-    bottom: 2%;
+    bottom: 1.5%;
+    left: 0.5%;
     font-size: 1.3rem;
     font-weight: 450;
 }
@@ -238,9 +239,16 @@ img {
     left: 70%;
 }
 
+.buttons button {
+    border: none;
+    background-color: transparent;
+    filter: brightness(0) saturate(100%) invert(83%) sepia(28%) saturate(516%) hue-rotate(162deg) brightness(92%) contrast(86%);
+}
+
 #announcements {
     position: relative;
     bottom: 2%;
+    left: 0.5%;
     font-size: 1.3rem;
     font-weight: 450;
 }
@@ -253,17 +261,17 @@ img {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-    padding: 1rem 3.5rem;
+    padding: 0 3.5rem;
 }
 
 .acard :nth-child(1) {
     border-top: 1px solid #709fc0;
-    padding-top: 1.5rem;
+    padding-top: 2.5rem;
 }
 
 #acard1 {
     border-top: none;
-    padding-top: 0;
+    padding-top: 1rem;
 }
 
 .announcement {
@@ -277,4 +285,58 @@ img {
     position: relative;
     top: 1.2rem;
     color: rgba(0, 0, 0, 0.6);
+}
+
+#trending {
+    position: relative;
+    bottom: 1.5%;
+    left: 0.5%;
+    font-size: 1.3rem;
+    font-weight: 450;
+}
+
+.friends {
+    display: grid;
+    grid-template-rows: repeat(1fr, 4);
+    gap: 0.1rem;
+    height: 100%;
+    background-color: white;
+    border-radius: 1rem;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+    padding-left: 1.5rem;
+    padding-right: 5.5rem;
+}
+
+.friend {
+    align-self: center;
+    display: grid;
+    grid-template-columns: 4rem 4fr;
+    grid-template-rows: 1fr 1fr;
+    padding-left: 2rem;
+    column-gap: 0.6rem;
+}
+
+.friend img {
+    grid-area: 1 / 1 / 3 / 2;
+    filter: none;
+    border: none;
+    height: 4rem;
+    width: 3rem;
+    clip-path: circle();
+    align-self: center;
+    justify-self: center;
+}
+
+.friend #loading_cat {
+    height: 3rem;
+    width: 3rem;
+}
+
+.friend #rabbit {
+    height: 3rem;
+    width: 4rem;
+}
+
+.id {
+    align-self: flex-end;
 }
